Remove math SIMD backend